--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    overflow:hidden;
+    /* overflow:hidden; */
 }
 
 /* Landing Page */
@@ -44,12 +44,12 @@ body {
 }
 .landing main{
     padding:5rem;
-    margin-top:2rem;
+    margin-top:1rem;
     display:flex;
     flex-direction: column;
     align-items:flex-start;
     gap:1rem;
-    font-size:6rem;
+    font-size:4rem;
     font-style:italic;
 }
 .landing a{
@@ -74,7 +74,6 @@ body {
 }
 @media (max-width: 768px) {
 .landing{
-    position:relative;
     overflow:hidden;
     background-image: url('./assets/landing.png');
     background-size: cover;
@@ -86,21 +85,16 @@ body {
 }
 
 .header-right {
-    position: absolute;
-    left: 16rem ;
+
 }
 .header-left {
-    padding-left:7rem;
 }
 .header-left img{
-    position: absolute;
-    right: 17rem ;
-    width: 50%;
-        padding-left:3rem;
+    width: 90%;
 
 }
 .landing main{
-    margin-top:8rem;
+    margin-top:5rem;
     padding:1.5rem;
     font-size:3rem;
 }
@@ -111,6 +105,7 @@ body {
     padding-left:1rem;
     padding-right:1rem;
     border-radius:0.5rem;
+    font-size:1rem;
 }
 }
 
