--- a/src/App.css
+++ b/src/App.css
@@ -7,45 +7,94 @@ body {
 
     /* overflow:hidden; */
 }
-/* alert */
+/* NavBar */
+.nav-bar{
+    z-index:20;
+    position:fixed;
+    top:0;
+    font-weight:700;
+    padding:1rem;
+    display:grid;
+    grid-template-columns: repeat(4, 1fr) 5fr;
+    grid-template-rows: repeat(1, 100px);
+    width:100%;
+    height:12%;
+    background: linear-gradient(90deg, rgba(71, 44, 90, 0.55) 32%, rgba(195, 165, 240, 0.8) 100%);
+}
+#nav-profile{
+    margin-right:3rem;
+    align-self:center;
+    justify-self:end;
+    width:3rem;
+    height:3rem;
+}
+#nav-logo{
+    justify-self:center;
+    align-self:center;
+    width:13rem;
+    height:13rem;
+    clip-path: inset(28% 30% 35% 30%);
+}
+.nav-bar a{
+    cursor:pointer;
+    font-size:1.5rem;
+    text-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
+    transform: scale(1.05);
+    white-space: nowrap;
+    justify-self:center;
+    align-self:center;
+    color:white;
+    text-decoration: none;
+}
 
+/* NavBar mobile */
+@media (max-width: 768px) {
 
+.nav-bar{
+    padding-top:1rem;
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(1, 80px);
+    width:100%;
+    height:10%;
+    background: linear-gradient(90deg, rgba(71, 44, 90, 0.55) 32%, rgba(195, 165, 240, 0.8) 100%);
+}
+#nav-profile{
+    margin-right:0;
+    align-self:center;
+    justify-self:end;
+    width:2rem;
+    height:2rem;
+}
+#nav-logo{
+    justify-self:center;
+    align-self:center;
+    width:8rem;
+    height:8rem;
+    clip-path: inset(28% 30% 35% 30%);
+}
+.nav-bar a {
+    font-size: 1rem;
+    text-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
+    transform: scale(1.02);
+    white-space: nowrap;
+    justify-self:center;
+    align-self:center;
+    color:white;
+    text-decoration: none;
+}
+}
 /* Landing Page */
 
 .landing{
+    padding-top:10rem;
     background-image: url('./assets/landing.png');
-    /* background-size: cover; */
     background-size: 120%;
     background-position: right 100% top  ;
     height: 100vh;
     width: 100%;
     font-weight:800;
     color:white;
-}
-.landing header {
-    margin: auto;
-    padding-top:1.3rem;
-    height: 15%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-left {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.header-right {
-    padding:5rem;
-    display: flex;
-    align-items: center;
-}
-.header-left img{
-    width: 50%;
 }
 .landing main{
     padding:5rem;
@@ -56,14 +105,6 @@ body {
     gap:1rem;
     font-size:4rem;
     font-style:italic;
-}
-.landing a{
-    cursor: pointer;
-    font-size:1.5rem;
-}
-.landing a:hover{
-    text-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
-    transform: scale(1.02);
 }
 .landing button{
     border:none;
@@ -77,6 +118,7 @@ body {
     border-radius:0.5rem;
     cursor: pointer;
 }
+
 @media (max-width: 768px) {
 .landing{
     overflow:hidden;
@@ -102,9 +144,6 @@ body {
     margin-top:5rem;
     padding:1.5rem;
     font-size:3rem;
-}
-.landing a{
-    font-size:1rem;
 }
 .landing button{
     padding-left:1rem;
