--- a/src/UserPages/userPages.css
+++ b/src/UserPages/userPages.css
@@ -1,3 +1,6 @@
+:root {
+  --main-color: #9759C7;
+}
 * {
     box-sizing: border-box;
 }
@@ -6,32 +9,16 @@ body {
     /* box-sizing: border-box; */
 
 }
+/* rooms headers */
 
 .rooms{
     height: 100vh;
     width: 100%;
-    background: #9759C7;
     color:white;
-    /* overflow:hidden; */
 }
 
-.rooms .header{
-    padding-top:1.5rem;
-    /* padding:3rem; */
-    /* background: red; */
-    width:95%;
-    height:10%;
-    margin:auto;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    flex-direction:row;
-}
 #logo {
-    /* position:absolute; */
-    /* right:6rem; */
     width:15rem;
-    /* background-color:yellow; */
     clip-path: inset(28% 30% 35% 30%);
 }
 #profile{
@@ -43,11 +30,12 @@ body {
 }
 
 .nav{
-    /* padding-left:6rem; */
-    /* padding-right:rem; */
-    /* background: green; */
-    width:95%;
-    height:10%;
+    padding:1rem;
+    background: var(--main-color);
+    width:100%;
+    z-index:10;
+    position:fixed;
+    height:35%;
     margin:auto;
     display:flex;
     flex-direction:row;
@@ -55,9 +43,10 @@ body {
     align-items:center;
     font-weight:700;
 }
-.nav .nav-left{
+
+.nav p{
 margin-left:5rem;
-font-size:1.5rem;
+font-size:1.7rem;
 }
 .nav-right{
     margin-right:2.5rem;
@@ -75,150 +64,19 @@ font-size:1.2rem;
 color:#8764C2;
 font-weight:700;
 }
-/*headers in mobile */
-@media (max-width: 768px) {
 
-.rooms .header{
-    padding-top:0.5rem;
-    /* background: red; */
-    width:100%;
-    height:10%;
-}
-#logo {
-    width:9rem;
-    clip-path: inset(28% 30% 35% 30%);
-}
-#profile{
-    width:2rem;
-}
-#search{
-    width:3rem;
-}
+/* rooms main */
 
-.nav{
-    /* background: green; */
-    width:100%;
-    height:5%;
-    margin-bottom:0.5rem;
-}
-.nav .nav-left{
-margin-left:2.5rem;
-font-size:1rem;
-}
-.nav-right{
-    margin-right:2.5rem;
-    gap:1rem;
-}
-.nav-right button{
-padding:0.5rem;
-border-radius:0.8rem;
-font-size:1rem;
-}
-}
-
-
-
-
-
-/* rooms flex */
-
-/* .rooms main{
-    width: 100%;
-    height:100vh;
-    border-top-left-radius: 4rem;
-    border-top-right-radius: 4rem;
-    background: #CCCBD6;
-    color:white;
-    overflow:hidden;
-}
-main #note{
-text-align:center;
-color: #3f3f46;
-font-size:2rem;
-padding:5rem;
-
-}
-main .room{
-    text-align:center;
-    width:100%;
-    height:17%;
-    margin:auto;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: space-between;
-    flex-direction:row;
-    padding-top:1rem;
-
-}
-
-.room > div {
-    gap:1rem;
-    color:black;
-    margin-left:6rem;
-    margin-right:6rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.room img {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  object-fit: cover;
-}
-#name{
-      font-size: 1.7rem;
-
-}
-
-
-
-.room span {
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.room .button-container {
-    padding-top:3rem;
-  display: flex;
-  justify-content: center;
-  gap:1rem;
-}
-
-.button-container button {
-  padding:0.5rem;
-  font-size: 1rem;
-background: #8764C2;
-  color: white;
-  font-weight:700;
-  border: none;
-  border-radius: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.day {
-  margin-right:5px
-}
-
-.month {
-  color:#8764C2;
-  margin-right: 5px;
-} */
-
-
-
-
-
-/* rooms grid */
 #note{
-text-align:center;
-color: #3f3f46;
-font-size:2rem;
-padding:5rem;
+  text-align:center;
+  color: #3f3f46;
+  font-size:2rem;
+  padding:5rem;
 }
 .rooms main{
+    position:fixed;
+    z-index:20;
+    margin-top:13rem;
     width: 100%;
     height:100vh;
     border-top-left-radius: 4rem;
@@ -226,13 +84,20 @@ padding:5rem;
     background: #CCCBD6;
     color:white;
     overflow:hidden;
+    display: flex;
+    flex-direction: column;
+}
+.rooms main .scrollable-content {
+    flex: 1;
+    overflow-y: auto;
+    padding-bottom:1rem;
 }
 main .room {
-    padding:2rem;
+    cursor: pointer;
+    padding:1rem;
     padding-left:5rem;
     height:20%;
     display: grid;
-    gap:1rem;
     grid-template-columns: minmax(100px, 3fr) minmax(50px, 1fr);
     grid-template-columns: 5fr 1fr;
     border-bottom: 0.1rem solid black;
@@ -286,7 +151,7 @@ main .room {
     border-radius: 0.7rem;;
     cursor: pointer;
     justify-self:center;
-    align-self:end;
+    /* align-self:end; */
 }
 
 
@@ -299,25 +164,91 @@ main .room {
     margin-right: 5px;
 }
 
-/* rooms in mobile grid */
+/* rooms in mobile */
 
 @media (max-width: 768px) {
+
+/* rooms headers */
+
+#search{
+    width:3rem;
+}
+
+.nav{
+    padding:0.5rem;
+    background: var(--main-color);
+    width:100%;
+    z-index:10;
+    position:fixed;
+    height:30%;
+    margin:auto;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-around;
+    align-items:center;
+    font-weight:700;
+}
+
+.nav p{
+margin-left:0.9rem;
+font-size:1.2rem;
+white-space:nowrap;
+justifu-self:start;
+}
+
+.nav-right{
+    margin-right:0;
+    margin-left:3rem;
+    display:flex;
+    justify-content:space-between;
+    flex-direction:row;
+    align-items:center;
+    gap:1rem;
+}
+.nav button{
+padding:0.8rem;
+border-radius:1rem;
+border:none;
+font-size:0.9rem;
+color:#8764C2;
+font-weight:700;
+align-self:center;
+justify-self:center;
+}
+
+/* rooms main */
+
 #note{
-text-align:center;
-color: #3f3f46;
-font-size:1.5rem;
+  text-align:center;
+  color: #3f3f46;
+  font-size:2rem;
+  padding:5rem;
+}
+.rooms main{
+    position:fixed;
+    z-index:20;
+    margin-top:11rem;
+    width: 100%;
+    height:100vh;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    background: #CCCBD6;
+    color:white;
+    overflow:hidden;
+    display: flex;
+    flex-direction: column;
+}
+.rooms main .scrollable-content {
+    flex: 1;
+    overflow-y: auto;
+    padding-bottom:1rem;
 }
 
 main .room {
     height:15%;
+    margin-bottom:0.5rem;
     padding:1.5rem;
     display: grid;
-    grid-template-columns: minmax(100px, 3fr) minmax(50px, 1fr);
-    grid-template-columns: 5fr 1fr;
-    grid-template-rows: auto auto;
-    justify-content: center;
-    align-items: center;
-    color: black;
 }
 
 
@@ -368,107 +299,6 @@ main .room {
 }
 }
 
-/* rooms in mobile flex */
-
-/* @media (max-width: 768px) {
-main #note{
-text-align:center;
-color: #3f3f46;
-font-size:2rem;
-padding:5rem;
-
-}
-main .room{
-    text-align:center;
-    width:100%;
-    height:15%;
-    margin:auto;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: center;
-    self-align: flex-start;
-    flex-direction:row;
-    padding-top:1rem;
-
-}
-
-.room  .div {
-    padding-left:1rem;
-    padding-right:1rem;
-    width:100%;
-    background-color:red;
-    gap:1rem;
-    margin-left:6rem;
-    margin-right:6rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-        self-align: center;
-
-}
-
-.room img {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  object-fit: cover;
-}
-#name{
-      font-size: 1rem;
-        white-space: nowrap;
-        justify-self:flex-end;
-        
-}
-
-.room span {
-  font-size: 0.8rem;
-  font-weight: 500;
-}
-
-.room .button-container {
-    padding-top:3rem;
-  display: flex;
-  justify-content: center;
-  gap:1rem;
-}
-
-.button-container button {
-  padding:0.5rem;
-  font-size: 1rem;
-background: #8764C2;
-  color: white;
-  font-weight:700;
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.day {
-  margin-right:5px
-}
-
-.month {
-  color:#8764C2;
-  margin-right: 5px;
-}
-} */
-
-.custom-confirm-button {
-    margin-right: 20px;
-    border-radius:0.8rem;
-}
-
-.custom-cancel-button {
-    margin-left: 20px;
-    border-radius:0.8rem;
-}
-.custom-alert-position {
-    border-radius:1.5rem;
-}
-
-
 
 
 
@@ -476,53 +306,496 @@ background: #8764C2;
 .custom-popup-error {
     border-radius: 20px;
     width:400px;
+    z-index: 10000 ;
 }
 .custom-cancel-button-error {
     border-radius:0.8rem;
     color:black;
     font-size:1.5rem;
 }
-.error-popup {
+.popup {
+    z-index:10000;
     text-align: center;
-    height: 350px;
+    height: 380px;
 }
 
-.error-icon {
+.icon {
     width: 350px;
     margin-bottom: 10px;
     padding-left: 90px;
 }
 
-.error-title {
+.title {
     margin-bottom: 10px;
     color: #333;
 }
 
-.error-message {
+.message {
     color: #555;
 }
 
-/* mobile popup error */
+
+/* success popup */
+.custom-popup-success {
+    border-radius: 20px;
+    width:400px;
+    z-index: 10000 ;
+}
+.custom-confirm-button-success {
+    border-radius:0.8rem;
+    color:black;
+    font-size:1.5rem;
+}
+
+/* question-popup in rooms (create room) */
+.question-popup{
+  height:200px;
+  border-radius:1rem;
+}
+
+
+
+/* popup error & success in mobile*/
 @media (max-width: 768px) {
+  .question-popup{
+  height:120px;
+}
+
   .title{
     font-size:1rem;
   }
-  .error-popup {
+  .popup {
     text-align: center;
     height: 300px;
 }
+  .icon {
+      width: 250px;
+      margin-bottom: 10px;
+      padding-left: 55px;
+  }
+  .custom-cancel-button-error {
+      border-radius:0.8rem;
+      color:black;
+      font-size:1rem;
+  }
+  .custom-popup-error {
+  width:300px;
+  }
+  .custom-popup-success {
+      width:300px;
+  }
+  .custom-confirm-button-success {
+      border-radius:0.8rem;
+      color:black;
+      font-size:1rem;
+  }
+}
 
-.error-icon {
-    width: 250px;
-    margin-bottom: 10px;
-    padding-left: 55px;
+
+/* chatting room */
+.chatting {
+  width: 100%;
+  height: 100vh;
 }
-.custom-cancel-button-error {
-    border-radius:0.8rem;
-    color:black;
-    font-size:1rem;
+
+.chatting header {
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  align-items:center;
+  width: 100%;
+  height: 35%;
+  background-color: var(--main-color);
+  z-index: 10;
 }
-.custom-popup-error {
-width:300px;
+.chatting .left-header{
+  display:flex;
+  color:white;
+  align-items:center;
+  gap:2rem;
 }
+.chatting #chat-name{
+font-size:2rem;
+font-weight:500;
+}
+
+.dropdown {
+    position: absolute;
+    right: 1rem;
+    top: 35%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index:25;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    width:6rem;
+    height:6rem;
+}
+.dropdown a {
+    background: none;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+.chatting img {
+  cursor:pointer;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.chatting main {
+    width:100%;
+    height: calc(100vh - 10rem - 6rem);
+    position:fixed;
+    overflow:hidden;
+    z-index:20;
+    margin-top:13rem; 
+    overflow-y: auto;
+    background: #CCCBD6;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+}
+.chatting main .message-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+
+.chatting main .avatar {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin: 0 0.5rem;
+  object-fit: cover;
+}
+
+.chatting main .message {
+  background: white;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 1.5rem;
+  margin: 0.5rem;
+  max-width: 70%;
+  word-wrap: break-word;
+}
+
+
+
+.chatting main .message.self {
+  margin-left: auto;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.chatting footer {
+  width: 100%;
+  padding: 0.8rem;
+  height: auto;
+  background: white;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  gap: 0.5rem;
+  z-index:20;
+}
+
+
+.chatting footer textarea {
+  flex: 1;
+  font-size:1.3rem;
+  height: 2.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0.5rem;
+  resize: none;
+  border:none;
+}
+.chatting footer textarea:hover,
+.chatting footer textarea:focus {
+  outline: none;
+  border: none;
+}
+
+
+
+/* room in mobile */
+@media (max-width: 768px) {
+
+.chatting header {
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  align-items:center;
+  width: 100%;
+  height: 30%;
+  background-color: var(--main-color);
+  z-index: 10;
+}
+.chatting .left-header{
+  display:flex;
+  color:white;
+  align-items:center;
+  gap:1rem;
+}
+.chatting #chat-name{
+font-size:1.5rem;
+font-weight:500;
+}
+
+.dropdown {
+    position: absolute;
+    right: 1rem;
+    top: 35%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index:25;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    width:5rem;
+    height:5rem;
+}
+.dropdown a {
+    background: none;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+.chatting img {
+  cursor:pointer;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.chatting main {
+    width:100%;
+    height: calc(100vh - 10rem - 5rem);
+    position:fixed;
+    overflow:hidden;
+    z-index:20;
+    margin-top:11rem;
+    overflow-y: auto;
+    background: #CCCBD6;
+    padding: 0.7rem;
+    display: flex;
+    flex-direction: column;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+}
+.chatting main .message-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+
+.chatting main .avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  margin: 0 0.5rem;
+  object-fit: cover;
+}
+
+.chatting main .message {
+  background: white;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 1rem;
+  margin: 0.5rem;
+  max-width: 70%;
+  word-wrap: break-word;
+}
+
+
+
+.chatting main .message.self {
+  margin-left: auto;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.chatting footer {
+  width: 100%;
+  padding: 0.8rem;
+  height: auto;
+  background: white;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  gap: 0.5rem;
+  z-index:20;
+}
+
+
+.chatting footer textarea {
+  flex: 1;
+  font-size:1.3rem;
+  height: 2.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0.5rem;
+  resize: none;
+  border:none;
+}
+.chatting footer textarea:hover,
+.chatting footer textarea:focus {
+  outline: none;
+  border: none;
+}
+/* .chatting header {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 15%;
+  background-color: var(--main-color);
+  z-index: 1;
+}
+
+.chatting header::after {
+  content: ' ';
+  width: 100%;
+  background: #CCCBD6;
+  height: 25%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  border-top-left-radius: 4rem;
+  border-top-right-radius: 4rem;
+}
+.chatting .left-header{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+}
+.chatting #chat-name{
+font-size:1.5rem;
+font-weight:500;
+}
+
+.dropdown {
+    position: absolute;
+    right: 1rem;
+    top: 30%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    width:6rem;
+    height:6rem;
+}
+.dropdown a {
+    background: none;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.chatting img {
+  width: 1.6rem;
+  height: 1.6rem;
+}
+
+.chatting main {
+  flex: 1;
+  margin-top:8rem;
+  margin-bottom: 3rem;
+  overflow-y: auto;
+  background: #CCCBD6;
+  padding: 1rem;
+  text-align: left;
+
+}
+
+.chatting main .message-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+
+.chatting main .avatar {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin: 0 0.5rem;
+  object-fit: cover;
+}
+
+.chatting main .message {
+  background: white;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  padding: 1rem;
+  margin: 0.5rem;
+  max-width: 70%;
+  word-wrap: break-word;
+}
+
+
+
+.chatting main .message.self {
+  margin-left: auto;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.chatting footer {
+  width: 100%;
+  padding: 0.5rem;
+  height: auto;
+  background: white;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  gap: 0.5rem;
+}
+
+.chatting footer textarea {
+  font-size:1.2rem;
+  height: 2.5rem;
+} */
 }
