--- a/src/UserPages/userPages.css
+++ b/src/UserPages/userPages.css
@@ -52,7 +52,7 @@ font-size:1.7rem;
     margin-right:2.5rem;
     display:flex;
     justify-content:space-around;
-    flex-directon:row;
+    flex-direction:row;
     align-items:center;
     gap:2rem;
 }
@@ -193,7 +193,7 @@ main .room {
 margin-left:0.9rem;
 font-size:1.2rem;
 white-space:nowrap;
-justifu-self:start;
+justify-self:start;
 }
 
 .nav-right{
@@ -316,7 +316,7 @@ main .room {
 .popup {
     z-index:10000;
     text-align: center;
-    height: 380px;
+    height: 390px;
 }
 
 .icon {
@@ -470,6 +470,8 @@ font-weight:500;
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
+      word-wrap: break-word !important;
+
 }
 
 
@@ -482,24 +484,37 @@ font-weight:500;
 }
 
 .chatting main .message {
-  background: white;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  padding: 1.5rem;
-  margin: 0.5rem;
-  max-width: 70%;
-  word-wrap: break-word;
+    background: white;
+    padding: 1.5rem;
+    margin: 0.5rem;
+    max-width: 70%;
+    word-wrap: break-word;
+
 }
 
 
 
-.chatting main .message.self {
-  margin-left: auto;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+.chatting main .rec {
+    word-wrap: break-word;
+    max-width: 70%;
+    justify-content:flex-start;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
+.chatting main .self {
+    max-width: 70%;
+    margin-left: auto;
+    flex-direction: row-reverse;
+    justify-content:flex-start;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    word-wrap: break-word;
+
+}
+
+
 
 .chatting footer {
   width: 100%;
@@ -525,6 +540,7 @@ font-weight:500;
   padding: 0.5rem;
   resize: none;
   border:none;
+  
 }
 .chatting footer textarea:hover,
 .chatting footer textarea:focus {
