--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,9 @@ body {
     color:white;
     text-decoration: none;
 }
+.nav-bar #mobileDropDown {
+    display:none;
+}
 
 /* NavBar mobile */
 @media (max-width: 768px) {
@@ -53,7 +56,7 @@ body {
 .nav-bar{
     padding-top:1rem;
     display:grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 80px);
     width:100%;
     height:10%;
@@ -62,26 +65,54 @@ body {
 #nav-profile{
     margin-right:0;
     align-self:center;
-    justify-self:end;
+    justify-self:flex-end;
     width:2rem;
     height:2rem;
 }
 #nav-logo{
-    justify-self:center;
+    justify-self:start;
     align-self:center;
-    width:8rem;
-    height:8rem;
+    width:8.5rem;
+    height:8.5rem;
     clip-path: inset(28% 30% 35% 30%);
 }
 .nav-bar a {
-    font-size: 1rem;
-    text-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5);
-    transform: scale(1.02);
-    white-space: nowrap;
-    justify-self:center;
+    display:none;
+}
+.nav-bar #mobileDropDown{
+    width:1.5rem;
+    margin-right:1rem;
+    justify-self:start;
     align-self:center;
-    color:white;
-    text-decoration: none;
+    display:block;
+}
+.mobile-drop-down {
+    position: absolute;
+    left: 2rem;
+    top: 30%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index:50;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    width:7rem;
+    height:9rem;
+}
+.nav-bar .mobile-drop-down li {
+    text-align: center;
+    width: 100%;
+    color:black;
+    font-size: 1rem;
+    list-style:none;
+    font-weight:500;
+}
+.nav-bar .mobile-drop-down #middle {
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding:0.8rem;
 }
 }
 /* Landing Page */
