--- a/src/UserPages/userPages.css
+++ b/src/UserPages/userPages.css
@@ -226,7 +226,7 @@ justify-self:center;
 }
 .rooms main{
     position:fixed;
-    z-index:20;
+    z-index:10;
     margin-top:9rem;
     width: 100%;
     height:100vh;
@@ -639,23 +639,35 @@ font-weight:500;
 
 .chatting main .message {
   background: white;
-  border-top-left-radius: 1rem;
+  /* border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+  border-bottom-right-radius: 1rem; */
   padding: 1rem;
   margin: 0.5rem;
   max-width: 70%;
   word-wrap: break-word;
 }
 
-
-
-.chatting main .message.self {
-  margin-left: auto;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+.chatting main .rec {
+    word-wrap: break-word;
+    max-width: 70%;
+    justify-content:flex-start;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
+.chatting main .self {
+    max-width: 70%;
+    margin-left: auto;
+    flex-direction: row-reverse;
+    justify-content:flex-start;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    word-wrap: break-word;
+
+}
+
 
 .chatting footer {
   width: 100%;
@@ -687,132 +699,45 @@ font-weight:500;
   outline: none;
   border: none;
 }
-/* .chatting header {
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 15%;
-  background-color: var(--main-color);
-  z-index: 1;
 }
 
-.chatting header::after {
-  content: ' ';
-  width: 100%;
-  background: #CCCBD6;
-  height: 25%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  border-top-left-radius: 4rem;
-  border-top-right-radius: 4rem;
-}
-.chatting .left-header{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-.chatting #chat-name{
-font-size:1.5rem;
-font-weight:500;
-}
-
-.dropdown {
-    position: absolute;
-    right: 1rem;
-    top: 30%;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 1rem;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 10;
+/* profile */
+.profile {
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
-    width:6rem;
-    height:6rem;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
+    width:90%;
+    margin:auto;
+    background-color: #f4f4f4;
+    border:1px solid black;
 }
-.dropdown a {
-    background: none;
+
+.profile-pic {
+    width: 30rem;
+    height: 30rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+    border: 10px solid #800080;
+}
+
+.buttons{
+  width:30%;
+  display:flex;
+  flex-direction: row;
+  justify-content:space-between;
+
+}
+.buttons button {
+    background-color: var(--main-color);
+    color: #fff;
     border: none;
-    padding: 10px;
-    text-align: center;
-    width: 100%;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 5px 0;
     cursor: pointer;
-    font-size: 1rem;
-}
-
-.chatting img {
-  width: 1.6rem;
-  height: 1.6rem;
-}
-
-.chatting main {
-  flex: 1;
-  margin-top:8rem;
-  margin-bottom: 3rem;
-  overflow-y: auto;
-  background: #CCCBD6;
-  padding: 1rem;
-  text-align: left;
-
-}
-
-.chatting main .message-wrapper {
-  display: flex;
-  align-items: center;
-  margin-bottom: 0.5rem;
 }
 
 
-.chatting main .avatar {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  margin: 0 0.5rem;
-  object-fit: cover;
-}
-
-.chatting main .message {
-  background: white;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  padding: 1rem;
-  margin: 0.5rem;
-  max-width: 70%;
-  word-wrap: break-word;
-}
-
-
-
-.chatting main .message.self {
-  margin-left: auto;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.chatting footer {
-  width: 100%;
-  padding: 0.5rem;
-  height: auto;
-  background: white;
-  display: flex;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  gap: 0.5rem;
-}
-
-.chatting footer textarea {
-  font-size:1.2rem;
-  height: 2.5rem;
-} */
-}
